<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_addstudent">

    <fragment
        android:id="@+id/nav_addstudent"
        android:name="com.example.smssender.ui.home.AddStudentFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_addstudent" />

    <fragment
        android:id="@+id/nav_sender"
        android:name="com.example.smssender.ui.sender.SenderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_sender" />

    <fragment
        android:id="@+id/nav_studenttable"
        android:name="com.example.smssender.ui.studentTable.StudentTableFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_studenttable" />
</navigation>